Document PPDG/src/objects/Strategic_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_focus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area of focus</label>
        <referenceTo>Area_of_focus__c</referenceTo>
        <relationshipLabel>Strategic Initiatives</relationshipLabel>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_RAG_rating__c</fullName>
        <label>Current RAG rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Number__c</fullName>
        <label>SI Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <label>Strategic Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Area_of_focus__c</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <columns>SI_Number__c</columns>
        <columns>Current_RAG_rating__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_active_SI</fullName>
        <columns>NAME</columns>
        <columns>SI_Number__c</columns>
        <columns>Area_of_focus__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Current active SIs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Strategic_Initiative_Review_input</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Strategic Initiative Review input</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Strategic Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Initiatives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>